@@ -1,6 +1,6 @@
 /* 
    GENERATED FILE, DO NOT EDIT
-   Generated from dcraw/dcraw.c at Sat Feb  7 09:42:17 2009
+   Generated from dcraw/dcraw.c at Fri Feb 13 11:06:49 2009
    Look into original file (probably http://cybercom.net/~dcoffin/dcraw/dcraw.c)
    for copyright information.
 */
@@ -5343,10 +5343,10 @@ void CLASS parse_riff()
   end = ftell(ifp) + size;
   if (!memcmp(tag,"RIFF",4) || !memcmp(tag,"LIST",4)) {
     get4();
-    while (ftell(ifp) < end)
+    while (ftell(ifp)+7 < end)
       parse_riff();
   } else if (!memcmp(tag,"nctg",4)) {
-    while (ftell(ifp) < end) {
+    while (ftell(ifp)+7 < end) {
       i = get2();
       size = get2();
       if ((i+1) >> 1 == 10 && size == 20)
